--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Kompas Polityczny</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_title_fragment">This is TitleFragment</string>
+    <string name="hello_blank_history_fragment">This is HistoryFragment</string>
+    <string name="hello_blank_result_fragment">This is ResultFragment</string>
+    <string name="hello_blank_test_fragment">This is TestFragment</string>
+    <string name="history_button_text">Check your tests history</string>
+    <string name="start_test_button_text">Start your test</string>
 </resources>
