--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="hello_blank_test_fragment">This is TestFragment</string>
     <string name="history_button_text">Check your tests history</string>
     <string name="start_test_button_text">Start your test</string>
+    <string name="previus_question_button_text">Cofnij do poprzedniego pytania</string>
+    <string name="disagree2_button_text">Zdecydowanie się nie zgadzam</string>
+    <string name="disagree_button_text">Nie zgadzam się</string>
+    <string name="neutral_button_text">Nie wiem / trudno powiedzieć</string>
+    <string name="agree_button_text">Zgadzam się</string>
+    <string name="agree2_button_text">Zdecydowanie się zgadzam</string>
+    <string name="question_number_format">Pytanie nr: %d</string>
 </resources>
