--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="agree_button_text">Zgadzam się</string>
     <string name="agree2_button_text">Zdecydowanie się zgadzam</string>
     <string name="question_number_format">Pytanie nr: %d z 82</string>
+    <string name="author_text">Made by Pawel Pruchniak</string>
 </resources>
