--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Kompas Polityczny</string>
-    <string name="history_button_text">Check your tests history</string>
+    <string name="history_button_text">Sprawdź historie swoich testów</string>
     <string name="start_test_button_text">Rozpocznij test!</string>
     <string name="previus_question_button_text">Cofnij do poprzedniego pytania</string>
     <string name="disagree2_button_text">Zdecydowanie się nie zgadzam</string>
@@ -10,10 +10,10 @@
     <string name="agree2_button_text">Zdecydowanie się zgadzam</string>
     <string name="question_number_format">Pytanie nr: %d z 83</string>
     <string name="author_text">Made by Pawel Pruchniak</string>
-    <string name="polityka_zewnętrzna_text">Naród - Polityka Zewnętrzna - Globalizm</string>
-    <string name="gospodarka_text">Komunizm - Gospodarka - Kapitalizm</string>
-    <string name="społeczeństwo_text">Tradycja - Społeczeństwo - Progres</string>
-    <string name="polityka_wewnętrzna_text">Kontrola - Polityka Wewnętrzna - Wolność</string>
+    <string name="polityka_zewnętrzna_text">Naród - POLITYKA ZEWNĘTRZNA - Globalizm</string>
+    <string name="gospodarka_text">Komunizm - GOSPODARKA - Kapitalizm</string>
+    <string name="społeczeństwo_text">Tradycja - SPOŁECZEŃSTWO - Progres</string>
+    <string name="polityka_wewnętrzna_text">Kontrola - POLITYKA WEWNĘTRZNA - Wolność</string>
     <string name="compass_image_description">Compass Image</string>
     <string name="delete_button_text">delete</string>
     <string name="dot_image_description">Dot image to show users place on politicalcompass</string>
