--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="delete_button_text">delete</string>
     <string name="dot_image_description">Dot image to show users place on politicalcompass</string>
     <string name="political_compass_image_description">Image of political compass</string>
+    <string name="menu_about_string">About</string>
+    <string name="about_fragment_string">Witam na fragmencie About!</string>
 
 </resources>
