Dodanie loga do title fragment_title.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="menu_about_string">About</string>
     <string name="about_fragment_string">Witam na fragmencie About!</string>
     <string name="menu_history_string">Historia</string>
+    <string name="title_logo_description">Logo Image</string>
 
 </resources>
